exports[`ActivityItem post component is self renders properly 1`] = `
<div
  className="activity-item-container">
  <div
    className="activity-item">
    <div
      className="avatar-wrapper">
      <div
        className="avatar"
        style={undefined}>
        <span
          className="avatar-self" />
      </div>
    </div>
    <div
      className="content-container">
      <div
        className="meta">
        <div
          className="display-name"
          title="{name}">
          Test User
        </div>
        <div
          className="published">
          2016-09-20T19:52:57.186Z
        </div>
      </div>
      <div
        className="activity-content">
        <div
          className="activity-text">
          Test Activity Content
        </div>
      </div>
    </div>
    <div
      className="activity-post-actions">
      <div
        className="activity-post-action">
        <div
          className="post-action-item">
          <div
            className="icon-button"
            onClick={[Function handleOnFlag]}>
            <div
              className="icon"
              title="Flag this message" />
          </div>
        </div>
      </div>
      <div
        className="activity-post-action">
        <div
          className="post-action-item">
          <div
            className="icon-button"
            onClick={[Function handleOnDelete]}>
            <div
              className="icon"
              title="Delete this message" />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivityItem post component not self renders properly 1`] = `
<div
  className="activity-item-container">
  <div
    className="activity-item">
    <div
      className="avatar-wrapper">
      <div
        className="avatar"
        style={undefined}>
        <span
          className="avatar-letter">
          T
        </span>
      </div>
    </div>
    <div
      className="content-container">
      <div
        className="meta">
        <div
          className="display-name"
          title="{name}">
          Test User
        </div>
        <div
          className="published">
          2016-09-20T19:52:57.186Z
        </div>
      </div>
      <div
        className="activity-content">
        <div
          className="activity-text">
          Test Activity Content
        </div>
      </div>
    </div>
    <div
      className="activity-post-actions">
      <div
        className="activity-post-action">
        <div
          className="post-action-item">
          <div
            className="icon-button"
            onClick={[Function handleOnFlag]}>
            <div
              className="icon"
              title="Flag this message" />
          </div>
        </div>
      </div>
      <div
        className="activity-post-action">
        <div
          className="action-spacer" />
      </div>
    </div>
  </div>
</div>
`;

exports[`ActivityItem tombstone component renders properly 1`] = `
<div
  className="activity-item-container">
  <div
    className="system-message">
    Test User deleted their own message. 2016-09-20T19:52:57.186Z
  </div>
</div>
`;
